PJFCB-12215 [HIGH] CVE-2025-23368 WildFly 31, A flaw was found in Wildfly Elytron integration